parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABS
    COMMA
    COMMENT
    L_BRACKET
    NEWLINE
    QUOTE_1
    QUOTE_2
    R_BRACKET
    XOR

Grammar

Rule 0     S' -> start
Rule 1     start -> MAIN COLON body
Rule 2     body -> goto body
Rule 3     body -> unset body
Rule 4     body -> print body
Rule 5     body -> exit body
Rule 6     body -> tag body
Rule 7     body -> if body
Rule 8     body -> assign body
Rule 9     body -> declaration body
Rule 10    body -> empty
Rule 11    goto -> GOTO NAME SEMICOLON
Rule 12    unset -> UNSET L_PAR TVAR R_PAR SEMICOLON
Rule 13    unset -> UNSET L_PAR AVAR R_PAR SEMICOLON
Rule 14    unset -> UNSET L_PAR VVAR R_PAR SEMICOLON
Rule 15    unset -> UNSET L_PAR SVAR R_PAR SEMICOLON
Rule 16    unset -> UNSET L_PAR SPVAR R_PAR SEMICOLON
Rule 17    unset -> UNSET L_PAR RAVAR R_PAR SEMICOLON
Rule 18    print -> PRINT L_PAR TVAR R_PAR SEMICOLON
Rule 19    print -> PRINT L_PAR AVAR R_PAR SEMICOLON
Rule 20    print -> PRINT L_PAR VVAR R_PAR SEMICOLON
Rule 21    print -> PRINT L_PAR SVAR R_PAR SEMICOLON
Rule 22    print -> PRINT L_PAR SPVAR R_PAR SEMICOLON
Rule 23    print -> PRINT L_PAR RAVAR R_PAR SEMICOLON
Rule 24    exit -> EXIT SEMICOLON
Rule 25    tag -> NAME COLON
Rule 26    if -> IF L_PAR condition R_PAR GOTO NAME SEMICOLON
Rule 27    condition -> condition AND condition
Rule 28    condition -> condition OR condition
Rule 29    condition -> NOT condition
Rule 30    condition -> relational
Rule 31    relational -> arithmetic EQUAL arithmetic
Rule 32    relational -> arithmetic NOT_EQUAL arithmetic
Rule 33    relational -> arithmetic GREATER arithmetic
Rule 34    relational -> arithmetic LESS arithmetic
Rule 35    relational -> arithmetic GREATER_EQUAL arithmetic
Rule 36    relational -> arithmetic LESS_EQUAL arithmetic
Rule 37    relational -> arithmetic
Rule 38    arithmetic -> arithmetic PLUS arithmetic
Rule 39    arithmetic -> arithmetic MINUS arithmetic
Rule 40    arithmetic -> arithmetic MULTIPLY arithmetic
Rule 41    arithmetic -> arithmetic DIVIDE arithmetic
Rule 42    arithmetic -> arithmetic REMAINDER arithmetic
Rule 43    arithmetic -> INTEGER
Rule 44    arithmetic -> DECIMAL
Rule 45    arithmetic -> STRING
Rule 46    arithmetic -> var
Rule 47    var -> TVAR
Rule 48    var -> AVAR
Rule 49    var -> VVAR
Rule 50    var -> SVAR
Rule 51    var -> RAVAR
Rule 52    var -> SPVAR
Rule 53    assign -> TVAR ASSIGN arithmetic SEMICOLON
Rule 54    assign -> AVAR ASSIGN arithmetic SEMICOLON
Rule 55    assign -> VVAR ASSIGN arithmetic SEMICOLON
Rule 56    assign -> SVAR ASSIGN arithmetic SEMICOLON
Rule 57    assign -> TVAR ASSIGN conversion SEMICOLON
Rule 58    assign -> AVAR ASSIGN conversion SEMICOLON
Rule 59    assign -> VVAR ASSIGN conversion SEMICOLON
Rule 60    assign -> SVAR ASSIGN conversion SEMICOLON
Rule 61    assign -> TVAR ASSIGN READ L_PAR R_PAR SEMICOLON
Rule 62    assign -> AVAR ASSIGN READ L_PAR R_PAR SEMICOLON
Rule 63    assign -> VVAR ASSIGN READ L_PAR R_PAR SEMICOLON
Rule 64    assign -> SVAR ASSIGN READ L_PAR R_PAR SEMICOLON
Rule 65    assign -> TVAR ASSIGN bitwise SEMICOLON
Rule 66    assign -> AVAR ASSIGN bitwise SEMICOLON
Rule 67    assign -> VVAR ASSIGN bitwise SEMICOLON
Rule 68    assign -> SVAR ASSIGN bitwise SEMICOLON
Rule 69    bitwise -> var AND_B var
Rule 70    bitwise -> var OR_B var
Rule 71    bitwise -> var XOR_B var
Rule 72    bitwise -> var SHIFT_L var
Rule 73    bitwise -> var SHIFT_R var
Rule 74    bitwise -> NOT_B TVAR
Rule 75    bitwise -> NOT_B AVAR
Rule 76    bitwise -> NOT_B VVAR
Rule 77    bitwise -> NOT_B SVAR
Rule 78    conversion -> L_PAR type R_PAR var
Rule 79    type -> INT
Rule 80    type -> FLOAT
Rule 81    type -> CHAR
Rule 82    declaration -> var
Rule 83    declaration -> TVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
Rule 84    declaration -> AVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
Rule 85    declaration -> VVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
Rule 86    declaration -> SVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
Rule 87    empty -> <empty>

Terminals, with rules where they appear

ABS                  : 
AND                  : 27
AND_B                : 69
ARRAY                : 83 84 85 86
ASSIGN               : 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 83 84 85 86
AVAR                 : 13 19 48 54 58 62 66 75 84
CHAR                 : 81
COLON                : 1 25
COMMA                : 
COMMENT              : 
DECIMAL              : 44
DIVIDE               : 41
EQUAL                : 31
EXIT                 : 24
FLOAT                : 80
GOTO                 : 11 26
GREATER              : 33
GREATER_EQUAL        : 35
IF                   : 26
INT                  : 79
INTEGER              : 43
LESS                 : 34
LESS_EQUAL           : 36
L_BRACKET            : 
L_PAR                : 12 13 14 15 16 17 18 19 20 21 22 23 26 61 62 63 64 78 83 84 85 86
MAIN                 : 1
MINUS                : 39
MULTIPLY             : 40
NAME                 : 11 25 26
NEWLINE              : 
NOT                  : 29
NOT_B                : 74 75 76 77
NOT_EQUAL            : 32
OR                   : 28
OR_B                 : 70
PLUS                 : 38
PRINT                : 18 19 20 21 22 23
QUOTE_1              : 
QUOTE_2              : 
RAVAR                : 17 23 51
READ                 : 61 62 63 64
REMAINDER            : 42
R_BRACKET            : 
R_PAR                : 12 13 14 15 16 17 18 19 20 21 22 23 26 61 62 63 64 78 83 84 85 86
SEMICOLON            : 11 12 13 14 15 16 17 18 19 20 21 22 23 24 26 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 83 84 85 86
SHIFT_L              : 72
SHIFT_R              : 73
SPVAR                : 16 22 52
STRING               : 45
SVAR                 : 15 21 50 56 60 64 68 77 86
TVAR                 : 12 18 47 53 57 61 65 74 83
UNSET                : 12 13 14 15 16 17
VVAR                 : 14 20 49 55 59 63 67 76 85
XOR                  : 
XOR_B                : 71
error                : 

Nonterminals, with rules where they appear

arithmetic           : 31 31 32 32 33 33 34 34 35 35 36 36 37 38 38 39 39 40 40 41 41 42 42 53 54 55 56
assign               : 8
bitwise              : 65 66 67 68
body                 : 1 2 3 4 5 6 7 8 9
condition            : 26 27 27 28 28 29
conversion           : 57 58 59 60
declaration          : 9
empty                : 10
exit                 : 5
goto                 : 2
if                   : 7
print                : 4
relational           : 30
start                : 0
tag                  : 6
type                 : 78
unset                : 3
var                  : 46 69 69 70 70 71 71 72 72 73 73 78 82

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . MAIN COLON body

    MAIN            shift and go to state 2

    start                          shift and go to state 1

state 1

    (0) S' -> start .



state 2

    (1) start -> MAIN . COLON body

    COLON           shift and go to state 3


state 3

    (1) start -> MAIN COLON . body
    (2) body -> . goto body
    (3) body -> . unset body
    (4) body -> . print body
    (5) body -> . exit body
    (6) body -> . tag body
    (7) body -> . if body
    (8) body -> . assign body
    (9) body -> . declaration body
    (10) body -> . empty
    (11) goto -> . GOTO NAME SEMICOLON
    (12) unset -> . UNSET L_PAR TVAR R_PAR SEMICOLON
    (13) unset -> . UNSET L_PAR AVAR R_PAR SEMICOLON
    (14) unset -> . UNSET L_PAR VVAR R_PAR SEMICOLON
    (15) unset -> . UNSET L_PAR SVAR R_PAR SEMICOLON
    (16) unset -> . UNSET L_PAR SPVAR R_PAR SEMICOLON
    (17) unset -> . UNSET L_PAR RAVAR R_PAR SEMICOLON
    (18) print -> . PRINT L_PAR TVAR R_PAR SEMICOLON
    (19) print -> . PRINT L_PAR AVAR R_PAR SEMICOLON
    (20) print -> . PRINT L_PAR VVAR R_PAR SEMICOLON
    (21) print -> . PRINT L_PAR SVAR R_PAR SEMICOLON
    (22) print -> . PRINT L_PAR SPVAR R_PAR SEMICOLON
    (23) print -> . PRINT L_PAR RAVAR R_PAR SEMICOLON
    (24) exit -> . EXIT SEMICOLON
    (25) tag -> . NAME COLON
    (26) if -> . IF L_PAR condition R_PAR GOTO NAME SEMICOLON
    (53) assign -> . TVAR ASSIGN arithmetic SEMICOLON
    (54) assign -> . AVAR ASSIGN arithmetic SEMICOLON
    (55) assign -> . VVAR ASSIGN arithmetic SEMICOLON
    (56) assign -> . SVAR ASSIGN arithmetic SEMICOLON
    (57) assign -> . TVAR ASSIGN conversion SEMICOLON
    (58) assign -> . AVAR ASSIGN conversion SEMICOLON
    (59) assign -> . VVAR ASSIGN conversion SEMICOLON
    (60) assign -> . SVAR ASSIGN conversion SEMICOLON
    (61) assign -> . TVAR ASSIGN READ L_PAR R_PAR SEMICOLON
    (62) assign -> . AVAR ASSIGN READ L_PAR R_PAR SEMICOLON
    (63) assign -> . VVAR ASSIGN READ L_PAR R_PAR SEMICOLON
    (64) assign -> . SVAR ASSIGN READ L_PAR R_PAR SEMICOLON
    (65) assign -> . TVAR ASSIGN bitwise SEMICOLON
    (66) assign -> . AVAR ASSIGN bitwise SEMICOLON
    (67) assign -> . VVAR ASSIGN bitwise SEMICOLON
    (68) assign -> . SVAR ASSIGN bitwise SEMICOLON
    (82) declaration -> . var
    (83) declaration -> . TVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
    (84) declaration -> . AVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
    (85) declaration -> . VVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
    (86) declaration -> . SVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
    (87) empty -> .
    (47) var -> . TVAR
    (48) var -> . AVAR
    (49) var -> . VVAR
    (50) var -> . SVAR
    (51) var -> . RAVAR
    (52) var -> . SPVAR

    GOTO            shift and go to state 14
    UNSET           shift and go to state 16
    PRINT           shift and go to state 23
    EXIT            shift and go to state 24
    NAME            shift and go to state 15
    IF              shift and go to state 25
    TVAR            shift and go to state 17
    AVAR            shift and go to state 18
    VVAR            shift and go to state 19
    SVAR            shift and go to state 20
    $end            reduce using rule 87 (empty -> .)
    RAVAR           shift and go to state 22
    SPVAR           shift and go to state 21

    body                           shift and go to state 4
    goto                           shift and go to state 5
    unset                          shift and go to state 6
    print                          shift and go to state 7
    exit                           shift and go to state 8
    tag                            shift and go to state 9
    if                             shift and go to state 10
    assign                         shift and go to state 11
    declaration                    shift and go to state 12
    empty                          shift and go to state 13
    var                            shift and go to state 26

state 4

    (1) start -> MAIN COLON body .

    $end            reduce using rule 1 (start -> MAIN COLON body .)


state 5

    (2) body -> goto . body
    (2) body -> . goto body
    (3) body -> . unset body
    (4) body -> . print body
    (5) body -> . exit body
    (6) body -> . tag body
    (7) body -> . if body
    (8) body -> . assign body
    (9) body -> . declaration body
    (10) body -> . empty
    (11) goto -> . GOTO NAME SEMICOLON
    (12) unset -> . UNSET L_PAR TVAR R_PAR SEMICOLON
    (13) unset -> . UNSET L_PAR AVAR R_PAR SEMICOLON
    (14) unset -> . UNSET L_PAR VVAR R_PAR SEMICOLON
    (15) unset -> . UNSET L_PAR SVAR R_PAR SEMICOLON
    (16) unset -> . UNSET L_PAR SPVAR R_PAR SEMICOLON
    (17) unset -> . UNSET L_PAR RAVAR R_PAR SEMICOLON
    (18) print -> . PRINT L_PAR TVAR R_PAR SEMICOLON
    (19) print -> . PRINT L_PAR AVAR R_PAR SEMICOLON
    (20) print -> . PRINT L_PAR VVAR R_PAR SEMICOLON
    (21) print -> . PRINT L_PAR SVAR R_PAR SEMICOLON
    (22) print -> . PRINT L_PAR SPVAR R_PAR SEMICOLON
    (23) print -> . PRINT L_PAR RAVAR R_PAR SEMICOLON
    (24) exit -> . EXIT SEMICOLON
    (25) tag -> . NAME COLON
    (26) if -> . IF L_PAR condition R_PAR GOTO NAME SEMICOLON
    (53) assign -> . TVAR ASSIGN arithmetic SEMICOLON
    (54) assign -> . AVAR ASSIGN arithmetic SEMICOLON
    (55) assign -> . VVAR ASSIGN arithmetic SEMICOLON
    (56) assign -> . SVAR ASSIGN arithmetic SEMICOLON
    (57) assign -> . TVAR ASSIGN conversion SEMICOLON
    (58) assign -> . AVAR ASSIGN conversion SEMICOLON
    (59) assign -> . VVAR ASSIGN conversion SEMICOLON
    (60) assign -> . SVAR ASSIGN conversion SEMICOLON
    (61) assign -> . TVAR ASSIGN READ L_PAR R_PAR SEMICOLON
    (62) assign -> . AVAR ASSIGN READ L_PAR R_PAR SEMICOLON
    (63) assign -> . VVAR ASSIGN READ L_PAR R_PAR SEMICOLON
    (64) assign -> . SVAR ASSIGN READ L_PAR R_PAR SEMICOLON
    (65) assign -> . TVAR ASSIGN bitwise SEMICOLON
    (66) assign -> . AVAR ASSIGN bitwise SEMICOLON
    (67) assign -> . VVAR ASSIGN bitwise SEMICOLON
    (68) assign -> . SVAR ASSIGN bitwise SEMICOLON
    (82) declaration -> . var
    (83) declaration -> . TVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
    (84) declaration -> . AVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
    (85) declaration -> . VVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
    (86) declaration -> . SVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
    (87) empty -> .
    (47) var -> . TVAR
    (48) var -> . AVAR
    (49) var -> . VVAR
    (50) var -> . SVAR
    (51) var -> . RAVAR
    (52) var -> . SPVAR

    GOTO            shift and go to state 14
    UNSET           shift and go to state 16
    PRINT           shift and go to state 23
    EXIT            shift and go to state 24
    NAME            shift and go to state 15
    IF              shift and go to state 25
    TVAR            shift and go to state 17
    AVAR            shift and go to state 18
    VVAR            shift and go to state 19
    SVAR            shift and go to state 20
    $end            reduce using rule 87 (empty -> .)
    RAVAR           shift and go to state 22
    SPVAR           shift and go to state 21

    goto                           shift and go to state 5
    body                           shift and go to state 27
    unset                          shift and go to state 6
    print                          shift and go to state 7
    exit                           shift and go to state 8
    tag                            shift and go to state 9
    if                             shift and go to state 10
    assign                         shift and go to state 11
    declaration                    shift and go to state 12
    empty                          shift and go to state 13
    var                            shift and go to state 26

state 6

    (3) body -> unset . body
    (2) body -> . goto body
    (3) body -> . unset body
    (4) body -> . print body
    (5) body -> . exit body
    (6) body -> . tag body
    (7) body -> . if body
    (8) body -> . assign body
    (9) body -> . declaration body
    (10) body -> . empty
    (11) goto -> . GOTO NAME SEMICOLON
    (12) unset -> . UNSET L_PAR TVAR R_PAR SEMICOLON
    (13) unset -> . UNSET L_PAR AVAR R_PAR SEMICOLON
    (14) unset -> . UNSET L_PAR VVAR R_PAR SEMICOLON
    (15) unset -> . UNSET L_PAR SVAR R_PAR SEMICOLON
    (16) unset -> . UNSET L_PAR SPVAR R_PAR SEMICOLON
    (17) unset -> . UNSET L_PAR RAVAR R_PAR SEMICOLON
    (18) print -> . PRINT L_PAR TVAR R_PAR SEMICOLON
    (19) print -> . PRINT L_PAR AVAR R_PAR SEMICOLON
    (20) print -> . PRINT L_PAR VVAR R_PAR SEMICOLON
    (21) print -> . PRINT L_PAR SVAR R_PAR SEMICOLON
    (22) print -> . PRINT L_PAR SPVAR R_PAR SEMICOLON
    (23) print -> . PRINT L_PAR RAVAR R_PAR SEMICOLON
    (24) exit -> . EXIT SEMICOLON
    (25) tag -> . NAME COLON
    (26) if -> . IF L_PAR condition R_PAR GOTO NAME SEMICOLON
    (53) assign -> . TVAR ASSIGN arithmetic SEMICOLON
    (54) assign -> . AVAR ASSIGN arithmetic SEMICOLON
    (55) assign -> . VVAR ASSIGN arithmetic SEMICOLON
    (56) assign -> . SVAR ASSIGN arithmetic SEMICOLON
    (57) assign -> . TVAR ASSIGN conversion SEMICOLON
    (58) assign -> . AVAR ASSIGN conversion SEMICOLON
    (59) assign -> . VVAR ASSIGN conversion SEMICOLON
    (60) assign -> . SVAR ASSIGN conversion SEMICOLON
    (61) assign -> . TVAR ASSIGN READ L_PAR R_PAR SEMICOLON
    (62) assign -> . AVAR ASSIGN READ L_PAR R_PAR SEMICOLON
    (63) assign -> . VVAR ASSIGN READ L_PAR R_PAR SEMICOLON
    (64) assign -> . SVAR ASSIGN READ L_PAR R_PAR SEMICOLON
    (65) assign -> . TVAR ASSIGN bitwise SEMICOLON
    (66) assign -> . AVAR ASSIGN bitwise SEMICOLON
    (67) assign -> . VVAR ASSIGN bitwise SEMICOLON
    (68) assign -> . SVAR ASSIGN bitwise SEMICOLON
    (82) declaration -> . var
    (83) declaration -> . TVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
    (84) declaration -> . AVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
    (85) declaration -> . VVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
    (86) declaration -> . SVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
    (87) empty -> .
    (47) var -> . TVAR
    (48) var -> . AVAR
    (49) var -> . VVAR
    (50) var -> . SVAR
    (51) var -> . RAVAR
    (52) var -> . SPVAR

    GOTO            shift and go to state 14
    UNSET           shift and go to state 16
    PRINT           shift and go to state 23
    EXIT            shift and go to state 24
    NAME            shift and go to state 15
    IF              shift and go to state 25
    TVAR            shift and go to state 17
    AVAR            shift and go to state 18
    VVAR            shift and go to state 19
    SVAR            shift and go to state 20
    $end            reduce using rule 87 (empty -> .)
    RAVAR           shift and go to state 22
    SPVAR           shift and go to state 21

    unset                          shift and go to state 6
    body                           shift and go to state 28
    goto                           shift and go to state 5
    print                          shift and go to state 7
    exit                           shift and go to state 8
    tag                            shift and go to state 9
    if                             shift and go to state 10
    assign                         shift and go to state 11
    declaration                    shift and go to state 12
    empty                          shift and go to state 13
    var                            shift and go to state 26

state 7

    (4) body -> print . body
    (2) body -> . goto body
    (3) body -> . unset body
    (4) body -> . print body
    (5) body -> . exit body
    (6) body -> . tag body
    (7) body -> . if body
    (8) body -> . assign body
    (9) body -> . declaration body
    (10) body -> . empty
    (11) goto -> . GOTO NAME SEMICOLON
    (12) unset -> . UNSET L_PAR TVAR R_PAR SEMICOLON
    (13) unset -> . UNSET L_PAR AVAR R_PAR SEMICOLON
    (14) unset -> . UNSET L_PAR VVAR R_PAR SEMICOLON
    (15) unset -> . UNSET L_PAR SVAR R_PAR SEMICOLON
    (16) unset -> . UNSET L_PAR SPVAR R_PAR SEMICOLON
    (17) unset -> . UNSET L_PAR RAVAR R_PAR SEMICOLON
    (18) print -> . PRINT L_PAR TVAR R_PAR SEMICOLON
    (19) print -> . PRINT L_PAR AVAR R_PAR SEMICOLON
    (20) print -> . PRINT L_PAR VVAR R_PAR SEMICOLON
    (21) print -> . PRINT L_PAR SVAR R_PAR SEMICOLON
    (22) print -> . PRINT L_PAR SPVAR R_PAR SEMICOLON
    (23) print -> . PRINT L_PAR RAVAR R_PAR SEMICOLON
    (24) exit -> . EXIT SEMICOLON
    (25) tag -> . NAME COLON
    (26) if -> . IF L_PAR condition R_PAR GOTO NAME SEMICOLON
    (53) assign -> . TVAR ASSIGN arithmetic SEMICOLON
    (54) assign -> . AVAR ASSIGN arithmetic SEMICOLON
    (55) assign -> . VVAR ASSIGN arithmetic SEMICOLON
    (56) assign -> . SVAR ASSIGN arithmetic SEMICOLON
    (57) assign -> . TVAR ASSIGN conversion SEMICOLON
    (58) assign -> . AVAR ASSIGN conversion SEMICOLON
    (59) assign -> . VVAR ASSIGN conversion SEMICOLON
    (60) assign -> . SVAR ASSIGN conversion SEMICOLON
    (61) assign -> . TVAR ASSIGN READ L_PAR R_PAR SEMICOLON
    (62) assign -> . AVAR ASSIGN READ L_PAR R_PAR SEMICOLON
    (63) assign -> . VVAR ASSIGN READ L_PAR R_PAR SEMICOLON
    (64) assign -> . SVAR ASSIGN READ L_PAR R_PAR SEMICOLON
    (65) assign -> . TVAR ASSIGN bitwise SEMICOLON
    (66) assign -> . AVAR ASSIGN bitwise SEMICOLON
    (67) assign -> . VVAR ASSIGN bitwise SEMICOLON
    (68) assign -> . SVAR ASSIGN bitwise SEMICOLON
    (82) declaration -> . var
    (83) declaration -> . TVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
    (84) declaration -> . AVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
    (85) declaration -> . VVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
    (86) declaration -> . SVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
    (87) empty -> .
    (47) var -> . TVAR
    (48) var -> . AVAR
    (49) var -> . VVAR
    (50) var -> . SVAR
    (51) var -> . RAVAR
    (52) var -> . SPVAR

    GOTO            shift and go to state 14
    UNSET           shift and go to state 16
    PRINT           shift and go to state 23
    EXIT            shift and go to state 24
    NAME            shift and go to state 15
    IF              shift and go to state 25
    TVAR            shift and go to state 17
    AVAR            shift and go to state 18
    VVAR            shift and go to state 19
    SVAR            shift and go to state 20
    $end            reduce using rule 87 (empty -> .)
    RAVAR           shift and go to state 22
    SPVAR           shift and go to state 21

    print                          shift and go to state 7
    body                           shift and go to state 29
    goto                           shift and go to state 5
    unset                          shift and go to state 6
    exit                           shift and go to state 8
    tag                            shift and go to state 9
    if                             shift and go to state 10
    assign                         shift and go to state 11
    declaration                    shift and go to state 12
    empty                          shift and go to state 13
    var                            shift and go to state 26

state 8

    (5) body -> exit . body
    (2) body -> . goto body
    (3) body -> . unset body
    (4) body -> . print body
    (5) body -> . exit body
    (6) body -> . tag body
    (7) body -> . if body
    (8) body -> . assign body
    (9) body -> . declaration body
    (10) body -> . empty
    (11) goto -> . GOTO NAME SEMICOLON
    (12) unset -> . UNSET L_PAR TVAR R_PAR SEMICOLON
    (13) unset -> . UNSET L_PAR AVAR R_PAR SEMICOLON
    (14) unset -> . UNSET L_PAR VVAR R_PAR SEMICOLON
    (15) unset -> . UNSET L_PAR SVAR R_PAR SEMICOLON
    (16) unset -> . UNSET L_PAR SPVAR R_PAR SEMICOLON
    (17) unset -> . UNSET L_PAR RAVAR R_PAR SEMICOLON
    (18) print -> . PRINT L_PAR TVAR R_PAR SEMICOLON
    (19) print -> . PRINT L_PAR AVAR R_PAR SEMICOLON
    (20) print -> . PRINT L_PAR VVAR R_PAR SEMICOLON
    (21) print -> . PRINT L_PAR SVAR R_PAR SEMICOLON
    (22) print -> . PRINT L_PAR SPVAR R_PAR SEMICOLON
    (23) print -> . PRINT L_PAR RAVAR R_PAR SEMICOLON
    (24) exit -> . EXIT SEMICOLON
    (25) tag -> . NAME COLON
    (26) if -> . IF L_PAR condition R_PAR GOTO NAME SEMICOLON
    (53) assign -> . TVAR ASSIGN arithmetic SEMICOLON
    (54) assign -> . AVAR ASSIGN arithmetic SEMICOLON
    (55) assign -> . VVAR ASSIGN arithmetic SEMICOLON
    (56) assign -> . SVAR ASSIGN arithmetic SEMICOLON
    (57) assign -> . TVAR ASSIGN conversion SEMICOLON
    (58) assign -> . AVAR ASSIGN conversion SEMICOLON
    (59) assign -> . VVAR ASSIGN conversion SEMICOLON
    (60) assign -> . SVAR ASSIGN conversion SEMICOLON
    (61) assign -> . TVAR ASSIGN READ L_PAR R_PAR SEMICOLON
    (62) assign -> . AVAR ASSIGN READ L_PAR R_PAR SEMICOLON
    (63) assign -> . VVAR ASSIGN READ L_PAR R_PAR SEMICOLON
    (64) assign -> . SVAR ASSIGN READ L_PAR R_PAR SEMICOLON
    (65) assign -> . TVAR ASSIGN bitwise SEMICOLON
    (66) assign -> . AVAR ASSIGN bitwise SEMICOLON
    (67) assign -> . VVAR ASSIGN bitwise SEMICOLON
    (68) assign -> . SVAR ASSIGN bitwise SEMICOLON
    (82) declaration -> . var
    (83) declaration -> . TVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
    (84) declaration -> . AVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
    (85) declaration -> . VVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
    (86) declaration -> . SVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
    (87) empty -> .
    (47) var -> . TVAR
    (48) var -> . AVAR
    (49) var -> . VVAR
    (50) var -> . SVAR
    (51) var -> . RAVAR
    (52) var -> . SPVAR

    GOTO            shift and go to state 14
    UNSET           shift and go to state 16
    PRINT           shift and go to state 23
    EXIT            shift and go to state 24
    NAME            shift and go to state 15
    IF              shift and go to state 25
    TVAR            shift and go to state 17
    AVAR            shift and go to state 18
    VVAR            shift and go to state 19
    SVAR            shift and go to state 20
    $end            reduce using rule 87 (empty -> .)
    RAVAR           shift and go to state 22
    SPVAR           shift and go to state 21

    exit                           shift and go to state 8
    body                           shift and go to state 30
    goto                           shift and go to state 5
    unset                          shift and go to state 6
    print                          shift and go to state 7
    tag                            shift and go to state 9
    if                             shift and go to state 10
    assign                         shift and go to state 11
    declaration                    shift and go to state 12
    empty                          shift and go to state 13
    var                            shift and go to state 26

state 9

    (6) body -> tag . body
    (2) body -> . goto body
    (3) body -> . unset body
    (4) body -> . print body
    (5) body -> . exit body
    (6) body -> . tag body
    (7) body -> . if body
    (8) body -> . assign body
    (9) body -> . declaration body
    (10) body -> . empty
    (11) goto -> . GOTO NAME SEMICOLON
    (12) unset -> . UNSET L_PAR TVAR R_PAR SEMICOLON
    (13) unset -> . UNSET L_PAR AVAR R_PAR SEMICOLON
    (14) unset -> . UNSET L_PAR VVAR R_PAR SEMICOLON
    (15) unset -> . UNSET L_PAR SVAR R_PAR SEMICOLON
    (16) unset -> . UNSET L_PAR SPVAR R_PAR SEMICOLON
    (17) unset -> . UNSET L_PAR RAVAR R_PAR SEMICOLON
    (18) print -> . PRINT L_PAR TVAR R_PAR SEMICOLON
    (19) print -> . PRINT L_PAR AVAR R_PAR SEMICOLON
    (20) print -> . PRINT L_PAR VVAR R_PAR SEMICOLON
    (21) print -> . PRINT L_PAR SVAR R_PAR SEMICOLON
    (22) print -> . PRINT L_PAR SPVAR R_PAR SEMICOLON
    (23) print -> . PRINT L_PAR RAVAR R_PAR SEMICOLON
    (24) exit -> . EXIT SEMICOLON
    (25) tag -> . NAME COLON
    (26) if -> . IF L_PAR condition R_PAR GOTO NAME SEMICOLON
    (53) assign -> . TVAR ASSIGN arithmetic SEMICOLON
    (54) assign -> . AVAR ASSIGN arithmetic SEMICOLON
    (55) assign -> . VVAR ASSIGN arithmetic SEMICOLON
    (56) assign -> . SVAR ASSIGN arithmetic SEMICOLON
    (57) assign -> . TVAR ASSIGN conversion SEMICOLON
    (58) assign -> . AVAR ASSIGN conversion SEMICOLON
    (59) assign -> . VVAR ASSIGN conversion SEMICOLON
    (60) assign -> . SVAR ASSIGN conversion SEMICOLON
    (61) assign -> . TVAR ASSIGN READ L_PAR R_PAR SEMICOLON
    (62) assign -> . AVAR ASSIGN READ L_PAR R_PAR SEMICOLON
    (63) assign -> . VVAR ASSIGN READ L_PAR R_PAR SEMICOLON
    (64) assign -> . SVAR ASSIGN READ L_PAR R_PAR SEMICOLON
    (65) assign -> . TVAR ASSIGN bitwise SEMICOLON
    (66) assign -> . AVAR ASSIGN bitwise SEMICOLON
    (67) assign -> . VVAR ASSIGN bitwise SEMICOLON
    (68) assign -> . SVAR ASSIGN bitwise SEMICOLON
    (82) declaration -> . var
    (83) declaration -> . TVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
    (84) declaration -> . AVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
    (85) declaration -> . VVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
    (86) declaration -> . SVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
    (87) empty -> .
    (47) var -> . TVAR
    (48) var -> . AVAR
    (49) var -> . VVAR
    (50) var -> . SVAR
    (51) var -> . RAVAR
    (52) var -> . SPVAR

    GOTO            shift and go to state 14
    UNSET           shift and go to state 16
    PRINT           shift and go to state 23
    EXIT            shift and go to state 24
    NAME            shift and go to state 15
    IF              shift and go to state 25
    TVAR            shift and go to state 17
    AVAR            shift and go to state 18
    VVAR            shift and go to state 19
    SVAR            shift and go to state 20
    $end            reduce using rule 87 (empty -> .)
    RAVAR           shift and go to state 22
    SPVAR           shift and go to state 21

    tag                            shift and go to state 9
    body                           shift and go to state 31
    goto                           shift and go to state 5
    unset                          shift and go to state 6
    print                          shift and go to state 7
    exit                           shift and go to state 8
    if                             shift and go to state 10
    assign                         shift and go to state 11
    declaration                    shift and go to state 12
    empty                          shift and go to state 13
    var                            shift and go to state 26

state 10
